--- a/src/__new/js/view/Tour/Tour.html
+++ b/src/__new/js/view/Tour/Tour.html
@@ -1,24 +1,63 @@
 
 <div class="tour-overlay"></div>
 <ol class="tourbus-legs" id={{id}}>
-	<li data-el='#top-toolbar' data-orientation='bottom' data-align='center'  data-highlight="true">
-		<h2>Let's take a quick tour through SnowPortal</h2>
+	<li data-orientation='centered' data-highlight="true">
+		<h5>Let's take a quick tour through SnowPortal</h5>
+		<div class="tourbus-buttons">
+			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
+			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
+		</div>
+	</li>
+	<li data-el='#top-toolbar-snow-configuration' data-orientation='bottom' data-align='top'  data-highlight="true">
+		<h5>Login & Configurations</h5>
 		<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 		<div class="tourbus-buttons">
 			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
 			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 		</div>
 	</li>
-	<li data-el='#scope-config-area' data-iframe='#snow-iframe' data-orientation='bottom' data-align='center'  data-highlight="true">
-		<h2>Select Area</h2>
+	<li data-el='#scope-config-area' data-iframe='#snow-iframe' data-orientation='top' data-align='bottom'  data-highlight="true">
+		<h5>Select Area</h5>
 		<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 		<div class="tourbus-buttons">
 			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
 			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 		</div>
 	</li>
-	<li data-el='#overview-header-scope' data-iframe='#snow-iframe' data-orientation='bottom' data-align='center'  data-highlight="true" data-left="100px">
-		<h2>Dashboard</h2>
+	<li data-el='#scope-config-time-range' data-iframe='#snow-iframe' data-orientation='top' data-align='bottom'  data-highlight="true">
+		<h5>Select Time Range</h5>
+		<p>Lorem ipsum lorem ipsum lorem ipsum</p>
+		<div class="tourbus-buttons">
+			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
+			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
+		</div>
+	</li>
+	<li data-el='#scope-config-sensors' data-iframe='#snow-iframe' data-orientation='top' data-align='bottom'  data-highlight="true">
+		<h5>Select Sensors</h5>
+		<p>Lorem ipsum lorem ipsum lorem ipsum</p>
+		<div class="tourbus-buttons">
+			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
+			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
+		</div>
+	</li>
+	<li data-el='#overview-header-scenes' data-iframe='#snow-iframe' data-orientation='top' data-align='bottom'  data-highlight="true" data-left="500px">
+		<h5>Scenes dashboard</h5>
+		<p>Lorem ipsum lorem ipsum lorem ipsum</p>
+		<div class="tourbus-buttons">
+			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
+			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
+		</div>
+	</li>
+	<li data-el='#overview-collections' data-iframe='#snow-iframe' data-orientation='top' data-align='bottom'  data-highlight="true" data-left="500px">
+		<h5>Composites dashboard</h5>
+		<p>Lorem ipsum lorem ipsum lorem ipsum</p>
+		<div class="tourbus-buttons">
+			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
+			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
+		</div>
+	</li>
+	<li data-el='.ptr-overview-add-composites' data-iframe='#snow-iframe' data-orientation='top' data-align='bottom'  data-highlight="true" data-left="500px" data-scroll-to="1000">
+		<h5>Add composites</h5>
 		<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 		<div class="tourbus-buttons">
 			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
