Multiple maps#select 2 - CSS, post-merge fixes

--- a/src/__new/styles/style.css
+++ b/src/__new/styles/style.css
@@ -303,6 +303,6 @@ label.container > input {
 }
 
 /* === 3D mode changes === */
-body.application.mode-3d #view-selector .period {
+body.application.mode-3d #view-selector .period.hidden {
 	display: none;
 }
