--- a/src/__new/js/view/components/Select/MultiSelect.css
+++ b/src/__new/js/view/components/Select/MultiSelect.css
@@ -29,8 +29,7 @@
 .select-multi-dropdown {
 	min-width: 5rem;
 }
-.select-multi-dropdown ul li[aria-selected=true]:before,
-.select-multi-dropdown ul li[aria-disabled=true]:before {
+.select-multi-dropdown ul li[aria-selected=true]:before {
 	content: "\f00c";
 	font-family: FontAwesome;
 	font-size: .7rem;
