Snow#Tour minor changes

--- a/src/__new/js/view/Tour/Tour.html
+++ b/src/__new/js/view/Tour/Tour.html
@@ -4,8 +4,8 @@
 	<li data-orientation='centered' data-highlight="true">
 		<h5>Let's take a quick tour through SnowPortal</h5>
 		<div class="tourbus-buttons">
-			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
-			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
+			<a href='#' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
+			<a href='#' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 		</div>
 	</li>
 	<li data-el='#top-toolbar-snow-configuration' data-orientation='bottom' data-align='top'  data-highlight="true">
@@ -56,7 +56,7 @@
 			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 		</div>
 	</li>
-	<li data-el='.ptr-overview-add-composites' data-iframe='#snow-iframe' data-orientation='top' data-align='bottom'  data-highlight="true" data-left="500px" data-scroll-to="1000">
+	<li data-el='.ptr-overview-add-composites' data-iframe='#snow-iframe' data-orientation='top' data-align='bottom'  data-highlight="true" data-left="700px">
 		<h5>Add composites</h5>
 		<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 		<div class="tourbus-buttons">
