Update visibility of texts for map tools.

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -259,6 +259,10 @@ tbody .x-grid-row.select_d97dff .x-grid-cell {
 	display: none!important;
 }
 
+#window-maptools-body .x-btn-center {
+	overflow: visible;
+}
+
 /*.detached-window .detach {
 	display: none;
 }*/
