--- a/src/css/app.css
+++ b/src/css/app.css
@@ -263,6 +263,11 @@ tbody .x-grid-row.select_d97dff .x-grid-cell {
 	overflow: visible;
 }
 
+#window-maptools-body .x-btn-center .x-btn-inner {
+	overflow: visible;
+}
+
+
 /*.detached-window .detach {
 	display: none;
 }*/
