Fix spontaneous dropping while dragging tool windows.

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -259,6 +259,14 @@ tbody .x-grid-row.select_d97dff .x-grid-cell {
 	display: none!important;
 }
 
+#draggingOverMapProtectionOverlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
 /*.detached-window .detach {
 	display: none;
 }*/
