Snow#tour - position of legs

--- a/src/__new/js/view/Tour/Tour.html
+++ b/src/__new/js/view/Tour/Tour.html
@@ -16,7 +16,7 @@
 			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 		</div>
 	</li>
-	<li data-el='#scope-config-area' data-iframe='#snow-iframe' data-orientation='top' data-align='bottom'  data-highlight="true">
+	<li data-el='#scope-config-area' data-iframe='#snow-iframe' data-orientation='top' data-highlight="true">
 		<h5>Select Area</h5>
 		<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 		<div class="tourbus-buttons">
@@ -24,7 +24,7 @@
 			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 		</div>
 	</li>
-	<li data-el='#scope-config-sensors' data-iframe='#snow-iframe' data-orientation='top' data-align='bottom'  data-highlight="true">
+	<li data-el='#scope-config-sensors' data-iframe='#snow-iframe' data-orientation='top'  data-highlight="true">
 		<h5>Select Sensors</h5>
 		<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 		<div class="tourbus-buttons">
@@ -32,7 +32,7 @@
 			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 		</div>
 	</li>
-	<li data-el='#scope-config-time-range' data-iframe='#snow-iframe' data-orientation='top' data-align='bottom'  data-highlight="true">
+	<li data-el='#scope-config-time-range' data-iframe='#snow-iframe' data-orientation='top'  data-highlight="true">
 		<h5>Select Time Range</h5>
 		<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 		<div class="tourbus-buttons">
@@ -40,7 +40,7 @@
 			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 		</div>
 	</li>
-	<li data-el='#overview-header-scenes' data-iframe='#snow-iframe' data-orientation='top' data-align='bottom'  data-highlight="true" data-left="500px">
+	<li data-el='#overview-header-scenes' data-iframe='#snow-iframe' data-orientation='top'  data-highlight="true">
 		<h5>Scenes dashboard</h5>
 		<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 		<div class="tourbus-buttons">
@@ -48,7 +48,7 @@
 			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 		</div>
 	</li>
-	<li data-el='#overview-collections' data-iframe='#snow-iframe' data-orientation='top' data-align='bottom'  data-highlight="true" data-left="500px">
+	<li data-el='#overview-collections' data-iframe='#snow-iframe' data-orientation='top' data-highlight="true">
 		<h5>Composites dashboard</h5>
 		<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 		<div class="tourbus-buttons">
@@ -56,12 +56,35 @@
 			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 		</div>
 	</li>
-	<li data-el='.ptr-overview-composites-buttons' data-iframe='#snow-iframe' data-orientation='top' data-align='bottom'  data-highlight="true" data-left="700px">
-		<h5>Add composites</h5>
+	<li data-el='#compare-composites-button' data-iframe='#snow-iframe' data-orientation='left'  data-highlight="true">
+		<h5>Add custom composites</h5>
 		<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 		<div class="tourbus-buttons">
 			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
 			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
+		</div>
+	</li>
+	<li data-el='.ptr-overview-collection .ptr-button' data-iframe='#snow-iframe' data-orientation='left'  data-highlight="true">
+		<h5>Show composites for collection</h5>
+		<p>Lorem ipsum lorem ipsum lorem ipsum</p>
+		<div class="tourbus-buttons">
+			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
+			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
+		</div>
+	</li>
+	<li data-el='#composites .empty' data-iframe='#snow-iframe' data-orientation='bottom'  data-highlight="true">
+		<h5>Select composite and show it on the map</h5>
+		<p>Lorem ipsum lorem ipsum lorem ipsum</p>
+		<div class="tourbus-buttons">
+			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
+			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
+		</div>
+	</li>
+	<li data-el='#map-holder' data-orientation='left'  data-highlight="true">
+		<h5>Explore composite on the map</h5>
+		<p>Lorem ipsum lorem ipsum lorem ipsum</p>
+		<div class="tourbus-buttons">
+			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
 		</div>
 	</li>
 </ol>
