Snow#resize panel on tour end

--- a/src/__new/js/view/Tour/Tour.html
+++ b/src/__new/js/view/Tour/Tour.html
@@ -69,7 +69,7 @@
 		<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 		<div class="tourbus-buttons">
 			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
-			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
+			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Show composites</a>
 		</div>
 	</li>
 	<li data-el='#composites .empty' data-iframe='#snow-iframe' data-orientation='bottom'  data-highlight="true">
@@ -77,14 +77,14 @@
 		<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 		<div class="tourbus-buttons">
 			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
-			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
+			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Show on map</a>
 		</div>
 	</li>
 	<li data-el='#map-holder' data-orientation='left'  data-highlight="true">
 		<h5>Explore composite on the map</h5>
 		<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 		<div class="tourbus-buttons">
-			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
+			<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Start using SnowPortal</a>
 		</div>
 	</li>
 </ol>
