Snow#additional tour steps & tour modularization

--- a/src/__new/js/view/Tour/Tour.css
+++ b/src/__new/js/view/Tour/Tour.css
@@ -37,6 +37,9 @@
 	font-size: 1.3rem;
 	text-align: center;
 }
+.tourbus-leg-inner ul li {
+	font-size: 1.3rem;
+}
 .tourbus-buttons {
 	text-align: center;
 }
