Toggle .useEo4sdLogo

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -259,15 +259,24 @@ tbody .x-grid-row.select_d97dff .x-grid-cell {
 	display: none!important;
 }
 
-/* Header === */
-.useEo4sdLogo .fields-holder > .label {
-	background: url("../images/eo4sd/eo4sd-logo.png") no-repeat 0 -2px;
-	background-size: 135px;
-	height: 79px;
-	font-size: 22px;
-	padding-left: 161px;
-	/*width: 250px;*/
+
+/* EO4SD */
+.useEo4sdLogo #header > h1 {
+	background: url("../images/eo4sd/eo4sd-logo.png") no-repeat 0 7px;
+	-webkit-background-size: 120px;
+	background-size: 120px;
+	vertical-align: top;
+	height: 77px;
+	padding-left: 122px;
+	pointer-events: none;
 }
+.useEo4sdLogo #header a {
+	pointer-events: all;
+}
+.useEo4sdLogo #view-selector {
+	padding-left: 140px;
+}
+
 
 
 /*.detached-window .detach {
