--- a/src/__new/js/view/Tour/snowTour/snowLegs.html
+++ b/src/__new/js/view/Tour/snowTour/snowLegs.html
@@ -1,7 +1,6 @@
 <li data-orientation='centered' data-highlight="true">
 	<h5>Let's take a quick tour through SnowPortal</h5>
 	<div class="tourbus-buttons">
-		<a href='#' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
 		<a href='#' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
@@ -9,7 +8,6 @@
 	<h5>Login & Configurations</h5>
 	<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 	<div class="tourbus-buttons">
-		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
@@ -17,7 +15,6 @@
 	<h5>Select Area</h5>
 	<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 	<div class="tourbus-buttons">
-		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
@@ -25,7 +22,6 @@
 	<h5>Select Sensors</h5>
 	<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 	<div class="tourbus-buttons">
-		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
@@ -33,7 +29,6 @@
 	<h5>Select Time Range</h5>
 	<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 	<div class="tourbus-buttons">
-		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
@@ -41,7 +36,6 @@
 	<h5>Scenes dashboard</h5>
 	<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 	<div class="tourbus-buttons">
-		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
@@ -49,7 +43,6 @@
 	<h5>Composites dashboard</h5>
 	<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 	<div class="tourbus-buttons">
-		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
@@ -57,7 +50,6 @@
 	<h5>Add custom composites</h5>
 	<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 	<div class="tourbus-buttons">
-		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
@@ -65,7 +57,6 @@
 	<h5>Compare composites</h5>
 	<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 	<div class="tourbus-buttons">
-		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
@@ -73,7 +64,6 @@
 	<h5>Show composites for collection</h5>
 	<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 	<div class="tourbus-buttons">
-		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Show composites</a>
 	</div>
 </li>
@@ -85,15 +75,13 @@
 		<li>Distribution of coverage - ...</li>
 	</ul>
 	<div class="tourbus-buttons">
-		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
-		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Show on map</a>
+		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Select composite</a>
 	</div>
 </li>
 <li data-el='#composites .empty' data-iframe='#snow-iframe' data-orientation='bottom'  data-highlight="true">
 	<h5>Select composite and show it on the map</h5>
 	<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 	<div class="tourbus-buttons">
-		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-stop'>Quit</a>
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Show on map</a>
 	</div>
 </li>
