--- a/src/__new/js/view/Tour/Tour.html
+++ b/src/__new/js/view/Tour/Tour.html
@@ -1,6 +1,6 @@
 
 <div class="tour-overlay">
-	<a href='#' class='button-ui button-ui-tourbus tourbus-stop tourbus-stop-common'>Quit tour</a>
+	<a href='#' class='button-ui button-ui-tourbus tourbus-stop-common'>Quit tour</a>
 </div>
 <ol class="tourbus-legs" id={{id}}>
 	{{content}}
