--- a/src/css/project/snow.css
+++ b/src/css/project/snow.css
@@ -174,6 +174,8 @@ body.mode-3d #top-toolbar-3dmap:not(.world-wind-2d),
 }
 .snow .new-table {
 	width: 100%;
+	border-collapse: separate;
+	border-spacing: 2px 0;
 }
 
 /* TODO temporary changes */
