--- a/src/css/app.css
+++ b/src/css/app.css
@@ -261,19 +261,19 @@ tbody .x-grid-row.select_d97dff .x-grid-cell {
 
 
 /* EO4SD */
-.useEo4sdLogo #header > h1 {
-	background: url("../images/eo4sd/eo4sd-logo.png") no-repeat 0 7px;
-	-webkit-background-size: 120px;
-	background-size: 120px;
+.useEo4sdUrbanLogo #header > h1 {
+	background: url("../images/eo4sd/eo4sd-urban-logo.png") no-repeat 0 10px;
+	-webkit-background-size: 122px;
+	background-size: 122px;
 	vertical-align: top;
 	height: 77px;
 	padding-left: 122px;
 	pointer-events: none;
 }
-.useEo4sdLogo #header a {
+.useEo4sdUrbanLogo #header a {
 	pointer-events: all;
 }
-.useEo4sdLogo #view-selector {
+.useEo4sdUrbanLogo #view-selector {
 	padding-left: 140px;
 }
 
