--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -57,55 +57,55 @@
 }
 
 
-/* EO4SD */
+/* EO4SD Urban */
 @media screen and (max-width: 1510px) {
-	.useEo4sdLogo #view-selector {
+	.useEo4sdUrbanLogo #view-selector {
 		height: 70px;
 	}
-	.useEo4sdLogo #view-selector > .group {
+	.useEo4sdUrbanLogo #view-selector > .group {
 		display: block;
 	}
-	.useEo4sdLogo #view-selector > .group:not(:first-child) {
+	.useEo4sdUrbanLogo #view-selector > .group:not(:first-child) {
 		margin-top: 0;
 	}
 
-	.useEo4sdLogo #top-toolbar {
+	.useEo4sdUrbanLogo #top-toolbar {
 		top: 70px;
 	}
 
 
-	.useEo4sdLogo #sidebar-tools,
-	.useEo4sdLogo #sidebar-reports {
+	.useEo4sdUrbanLogo #sidebar-tools,
+	.useEo4sdUrbanLogo #sidebar-reports {
 		top: 70px;
 	}
-	.useEo4sdLogo body.application #main {
+	.useEo4sdUrbanLogo body.application #main {
 		padding-top: 55px;
 	}
 
-	.useEo4sdLogo .toggle-useWBHeader body.application #main {
+	.useEo4sdUrbanLogo .toggle-useWBHeader body.application #main {
 		padding-top: 95px;
 	}
-	.useEo4sdLogo .toggle-useHeader body.application #main {
+	.useEo4sdUrbanLogo .toggle-useHeader body.application #main {
 		padding-top: 100px;
 	}
-	.useEo4sdLogo .toggle-useWBHeader.toggle-useHeader body.application #main {
+	.useEo4sdUrbanLogo .toggle-useWBHeader.toggle-useHeader body.application #main {
 		padding-top: 140px;
 	}
 
-	.useEo4sdLogo .toggle-useTopToolbar body.application #main {
+	.useEo4sdUrbanLogo .toggle-useTopToolbar body.application #main {
 		padding-top: 85px;
 	}
-	.useEo4sdLogo .toggle-useTopToolbar #sidebar-tools,
-	.useEo4sdLogo .toggle-useTopToolbar #sidebar-reports {
+	.useEo4sdUrbanLogo .toggle-useTopToolbar #sidebar-tools,
+	.useEo4sdUrbanLogo .toggle-useTopToolbar #sidebar-reports {
 		top: 100px;
 	}
-	.useEo4sdLogo .toggle-useTopToolbar.toggle-useHeader body.application #main {
+	.useEo4sdUrbanLogo .toggle-useTopToolbar.toggle-useHeader body.application #main {
 		padding-top: 130px;
 	}
-	.useEo4sdLogo .toggle-useTopToolbar.toggle-useWBHeader body.application #main {
+	.useEo4sdUrbanLogo .toggle-useTopToolbar.toggle-useWBHeader body.application #main {
 		padding-top: 125px;
 	}
-	.useEo4sdLogo .toggle-useTopToolbar.toggle-useHeader.toggle-useWBHeader body.application #main {
+	.useEo4sdUrbanLogo .toggle-useTopToolbar.toggle-useHeader.toggle-useWBHeader body.application #main {
 		padding-top: 170px;
 	}
 }
