FeatureInfo#provisional trigger

--- a/src/__new/js/view/widgets/MapToolsWidget/MapToolsWidget.css
+++ b/src/__new/js/view/widgets/MapToolsWidget/MapToolsWidget.css
@@ -1,4 +1,13 @@
 #floater-map-tools-widget {
-	left: 16rem;
+	left: 17rem;
 	top: 10rem;
+	height: 10rem;
+}
+
+/* triggers */
+.map-tools-trigger {
+
+}
+.map-tools-trigger.active {
+	background: red;
 }
