English texts extracted from the new part of the application.

--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.html
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.html
@@ -1,6 +1,6 @@
 <div id="{{id}}">
 	<div class="feature-info-window-header">
-		<div class="feature-info-title">Feature name (GID)</div>
+		<div class="feature-info-title">{{featureName}}</div>
 		<div class="feature-info-close">
 			<img title="Close" src="__new/img/close.png">
 		</div>
@@ -14,7 +14,7 @@
 	</div>
 	<div class="feature-info-window-footer">
 		<div class="floater-row">
-			<div class="widget-button widget-button-export" id="export-feature-info-csv">Export to XLS</div>
+			<div class="widget-button widget-button-export" id="export-feature-info-csv">{{exportToXls}}</div>
 		</div>
 	</div>
 	<div class="overlay"></div>
