--- a/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomAU.html
+++ b/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomAU.html
@@ -2,12 +2,12 @@
 	<div class="floater-row layer-check">
 	</div>
 	<div class="floater-row export-row">
-		<div class="widget-button widget-button-export" id="polygons-export-json" disabled="disabled">Export layer to GeoJSON</div>
-		<div class="widget-button widget-button-export" id="polygons-export-shp" disabled="disabled">Export layer to SHP</div>
+		<div class="widget-button widget-button-export" id="polygons-export-json" disabled="disabled">{{exportLayerToGeoJson}}</div>
+		<div class="widget-button widget-button-export" id="polygons-export-shp" disabled="disabled">{{exportLayerToShp}}</div>
 	</div>
 	<div class="floater-row">
-		<div class="floater-row-caption">Draw custom Analytical units</div>
-		<div class="widget-button map-button button-drawing-activation" id="button-draw-polygons">Actviate drawing</div>
+		<div class="floater-row-caption">{{drawCustomAnalyticalUnits}}</div>
+		<div class="widget-button map-button button-drawing-activation" id="button-draw-polygons">{{activateDrawing}}</div>
 	</div>
 	<div class="floater-row">
 		<div id="{{id}}-table-container"></div>
@@ -15,7 +15,7 @@
 </div>
 <div id="custom-au-info">
 	<div class="floater-row">
-		<div class="floater-row-caption">Draw custom Analytical units</div>
+		<div class="floater-row-caption">{{drawCustomAnalyticalUnits}}</div>
 		<p></p>
 	</div>
 </div>
