--- a/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidgetFooter.html
+++ b/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidgetFooter.html
@@ -1,13 +1,13 @@
 <div class="floater-row footer-buttons">
 	<div class="widget-button hidden" id="evaluation-confirm"></div>
-	<div class="widget-button" id="evaluation-unselect" disabled="disabled">Clear selection</div>
-	<div class="widget-button secondary {{hidden}}" id="evaluation-add-category" disabled="disabled">Add category</div>
+	<div class="widget-button" id="evaluation-unselect" disabled="disabled">{{clearSelection}}</div>
+	<div class="widget-button secondary {{hidden}}" id="evaluation-add-category" disabled="disabled">{{addCategory}}</div>
 </div>
 <div class="floater-row row-export">
-	<div class="widget-button widget-button-export" id="export-json" disabled="disabled">Export to GeoJSON</div>
-	<div class="widget-button widget-button-export" id="export-xls" disabled="disabled">Export to XLS</div>
+	<div class="widget-button widget-button-export" id="export-json" disabled="disabled">{{exportToGeoJson}}</div>
+	<div class="widget-button widget-button-export" id="export-xls" disabled="disabled">{{exportToXls}}</div>
 </div>
 <div class="floater-row row-export">
-	<div class="widget-button widget-button-export" id="export-shp" disabled="disabled">Export to SHP</div>
-	<div class="widget-button widget-button-export" id="export-csv" disabled="disabled">Export to CSV</div>
+	<div class="widget-button widget-button-export" id="export-shp" disabled="disabled">{{exportToShp}}</div>
+	<div class="widget-button widget-button-export" id="export-csv" disabled="disabled">{{exportToCsv}}</div>
 </div>
