--- a/src/__new/js/view/widgets/WidgetFloater.html
+++ b/src/__new/js/view/widgets/WidgetFloater.html
@@ -2,8 +2,8 @@
 	<div class="floater-header">
 		<span>{{name}}</span>
 		<div class="floater-tools-container">
-			<div title="Minimise" class="floater-tool widget-minimise">
-				<img alt="Minimise" src="{{minimiseSrc}}"/>
+			<div title="{{minimise}}" class="floater-tool widget-minimise">
+				<img alt="{{minimise}}" src="{{minimiseSrc}}"/>
 			</div>
 		</div>
 	</div>
