--- a/src/__new/js/view/selectors/PeriodsSelector/PeriodsSelector.html
+++ b/src/__new/js/view/selectors/PeriodsSelector/PeriodsSelector.html
@@ -1,3 +1,3 @@
 <div class="selector" id="{{id}}">
-	<span class="selector-label">Period</span>
+	<span class="selector-label">{{period}}</span>
 </div>
