--- a/src/__new/js/view/widgets/WidgetPlaceholder.html
+++ b/src/__new/js/view/widgets/WidgetPlaceholder.html
@@ -2,7 +2,7 @@
     <span>{{name}}</span>
     <div class="placeholder-tools-container">
         <div class="placeholder-tool widget-maximise">
-            <img alt="Maximise" src="__new/img/maximise-icon.png"/>
+            <img alt="{{maximise}}" src="__new/img/maximise-icon.png"/>
         </div>
     </div>
 </div>
