Snow#remove type submit

--- a/src/__new/js/view/widgets/SnowRegistration/SnowRegistration.html
+++ b/src/__new/js/view/widgets/SnowRegistration/SnowRegistration.html
@@ -5,7 +5,7 @@
 	<input id="snow-reg-password" placeholder="Enter password" type="password"/>
 	<label for="snow-reg-password-check">Repeat password</label>
 	<input id="snow-reg-password-check" placeholder="Repeat password" type="password"/>
-	<button class="widget-button" id="snow-reg-submit" type="submit">Sign up</button>
+	<button class="widget-button" id="snow-reg-submit">Sign up</button>
 </form>
 <div id="snow-reg-info">
 	<span></span>
