--- a/src/__new/js/view/widgets/SnowRegistration/SnowRegistration.html
+++ b/src/__new/js/view/widgets/SnowRegistration/SnowRegistration.html
@@ -1,4 +1,4 @@
-<form>
+<div class="form">
 	<label for="snow-reg-email">Email</label>
 	<input id="snow-reg-email" placeholder="Enter email" type="email"/>
 	<label for="snow-reg-password">Password</label>
@@ -6,7 +6,7 @@
 	<label for="snow-reg-password-check">Repeat password</label>
 	<input id="snow-reg-password-check" placeholder="Repeat password" type="password"/>
 	<button class="widget-button" id="snow-reg-submit">Sign up</button>
-</form>
+</div>
 <div id="snow-reg-info">
 	<span></span>
 </div>
