Snow#tour fixes

--- a/src/__new/js/view/Tour/snowTour/snowLegs.html
+++ b/src/__new/js/view/Tour/snowTour/snowLegs.html
@@ -4,7 +4,7 @@
 		<a href='#' class='button-ui button-ui-tourbus tourbus-next'>Next</a>
 	</div>
 </li>
-<li data-el='#top-toolbar-snow-configuration' data-orientation='bottom' data-align='top'  data-highlight="true">
+<li data-el='#top-toolbar' data-orientation='bottom' data-align='top'  data-highlight="true">
 	<h5>Login & Configurations</h5>
 	<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 	<div class="tourbus-buttons">
@@ -78,7 +78,7 @@
 		<a href='javascript:void(0);' class='button-ui button-ui-tourbus tourbus-next'>Select composite</a>
 	</div>
 </li>
-<li data-el='#composites .empty' data-iframe='#snow-iframe' data-orientation='bottom'  data-highlight="true">
+<li data-el='#composites .ptr-composites-composite' data-iframe='#snow-iframe' data-orientation='bottom'  data-highlight="true">
 	<h5>Select composite and show it on the map</h5>
 	<p>Lorem ipsum lorem ipsum lorem ipsum</p>
 	<div class="tourbus-buttons">
